--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container-wrap">
         <nav>
             <div>
-                <img src="serche-logo.png" alt="serche logo" class="logo">
+                <img src="serche-glogo.png" alt="serche logo" class="logo">
             </div>
         </nav>
         <img src="rocket2.png" class="rocket">
