--- a/public/index.html
+++ b/public/index.html
@@ -98,8 +98,9 @@
                     body: JSON.stringify(data),
                 })
                 const json = await resp.json();
-                if (json.statusCode === 200) {
+                if (json.message === "success") {
                     alert("Thank you for subscribing");
+                    document.getElementById("email-input").value = "";
                 } else {
                     alert("Something went wrong... Please try again");
                 }
