fixed social media links

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> landing page </title>
+    <title> Serche HQ </title>
     <link rel="stylesheet" href="main.css">
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -55,11 +55,15 @@
                     </div>
                 </div>
                 <div class="social-media">
-                    <a href="#"> <i class="fab fa-facebook-f"></i> FACEBOOK</a>
-                    <a href="https://twitter.com/serche_hq"> <i class="fab fa-twitter"></i> TWITTER </a>
-                    <a href="https://instagram.com/serche_hq?igshid=YmMyMTA2M2Y="> <i class="fab fa-instagram"></i>
+                    <a target="_blank" href="http://www.facebook.com/profile.php?id=100092875055707"> <i
+                            class="fab fa-facebook-f"></i>
+                        FACEBOOK</a>
+                    <a target="_blank" href="https://twitter.com/serche_hq"> <i class="fab fa-twitter"></i> TWITTER </a>
+                    <a target="_blank" href="https://instagram.com/serchehq?igshid=NTc4MTIwNjQ2YQ=="> <i
+                            class="fab fa-instagram"></i>
                         INSTAGRAM </a>
-                    <a href="https://www.linkedin.com/company/serchehq/"> <i class="fab fa-linkedin"></i> LINKEDIN </a>
+                    <a target="_blank" href="https://www.linkedin.com/company/serchehq/"> <i
+                            class="fab fa-linkedin"></i> LINKEDIN </a>
                 </div>
             </div>
         </div>
